2007-11-02  Joshua Sumali  <jsumali@redhat.com>

	* rt/com/sun/media/sound/DataPusher.java: Removed stub since this is
	now implemented.
	* rt/com/sun/media/sound/JDK13Services.java: Likewise.
	* rt/com/sun/media/sound/JavaSoundAudioClip.java: Likewise.
	* rt/com/sun/media/sound/MidiInDevice.java: Likewise.
	* rt/com/sun/media/sound/MidiInDeviceProvider.java: Likewise.
	* rt/com/sun/media/sound/MidiOutDeviceProvider.java: Likewise.
	* rt/com/sun/media/sound/MidiUtils.java: Likewise.
	* rt/com/sun/media/sound/PortMixer.java: Likewise.
	* rt/com/sun/media/sound/PortMixerProvider.java: Likewise.
	* rt/com/sun/media/sound/ReferenceCountingDevice.java: Likewise.

2007-11-02  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-libraries.patch: Added patch to remove conflicting
	definition of uLong. This fixes the build on 64-bit.

2007-11-01  Gary Benson  <gbenson@redhat.com>

	* acinclude.m4 (SET_ARCH_DIRS): Remove s390.
	* configure: Regenerated.

2007-10-31  Joshua Sumali  <jsumali@redhat.com>

	* patches/icedtea-sunsrc.patch: Fixed patch to include some missing
	sources.

2007-10-30  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-bytecodeInterpreterWithChecks.patch: New patch to
	fix cpp generated.
	* patches/icedtea-javafiles.patch: New patch to add missing files to
	the list.
	* Makefile.am: Added patches to the list.
	* Makefile.in: Regenerated.

2007-10-24  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-libraries.patch: Updated jpeg patches to properly
	create OpenJDK's libjpeg.so without files common to the system
	installed libjpeg.so.

2007-10-23  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* j2se/make/common/Defs-linux.gmk: Updated for b22.
	* j2se/make/common/shared/Platform.gmk: Likewise.
	* j2se/src/share/bin/java.c: Likewise.

2007-10-22  Lillian Angel  <langel@redhat.com>

	* configure.ac: Fixed typo. libgif should be giflib.
	* configure: Regenerate.

2007-10-22  Lillian Angel  <langel@redhat.com>
